--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ tr:nth-child(even) {
                             <img src="assets/images/kimura.jpeg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7"><strong>Tetsunari Kimura
-</strong><br>Konan University, Japan</p>
+</strong><br>Kobe University, Japan</p>
                     </div>
                     <div class="card-footer">
                         
