--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@ tr:nth-child(even) {
   background-color:    #fdfdfa   ;
 }
 </style>
+<style type="text/css">blink {
+        animation: blinker 0.6s linear infinite;
+        color:   #0ce0f5 ;
+       }
+      @keyframes blinker {  
+        50% { opacity: 0; }
+       }
+       .blink-one {
+         animation: blinker-one 1s linear infinite;
+       }
+       @keyframes blinker-one {  
+         0% { opacity: 0; }
+       }
+       .blink-two {
+         animation: blinker-two 1.4s linear infinite;
+       }
+       @keyframes blinker-two {  
+         100% { opacity: 0; }
+       }
+</style>	
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -100,7 +120,10 @@ tr:nth-child(even) {
 <div><strong>Department of Basic Science and Humanities</strong></div>
 <div><strong>Institute of Engineering &amp; Management, Kolkata</strong></div></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>Date:18-20 December, 2020</strong></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://easychair.org/conferences/?conf=iccaes2020">Abstract Submit</a></div>
+                <div class="mbr-section-btn">
+				<a class="btn btn-md btn-white-outline display-4" href="https://easychair.org/conferences/?conf=iccaes2020">Abstract Submit</a>
+				<a class="btn btn-md btn-white-outline display-4" href="COVID TECH WAR/COVID TECH WAR.html">COVID TECH WAR</a>
+				</div>
             </div>
         </div>
     </div>
