--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ tr:nth-child(even) {
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>ICCAES 2020</title>
+  <title>ICCAES 2020</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -151,7 +152,7 @@ tr:nth-child(even) {
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-12"><p>We welcome you in the <strong>2nd International Conference on Chemical and Environmental Sciences 2020 (ICCAES 2020)</strong>, scheduled to be held during <strong>18-20 December, 2020 </strong>in Kolkata, India. The conference will be organised by <strong>Department of Basic Science and humanities, Institute of Engineering &amp; Management, Kolkata.</strong> <strong>The conference will be on virtual platform keeping in mind of COVID-19 crisis.</strong> ICCAES is an interdisciplinary forum on all aspects of Chemistry and Environmental Sciences including Spectroscopy and its application, Synthetic chemistry, Green Chemistry, Application of Nanobiotechnology, Polymer Chemistry, Materials Chemitry, Bioinorganic catalysis, Pharmaceutical Chemistry and drug discovery, Food chemistry, Agricultural Chemistry, Theoretical chemistry, Industrial Chemistry, Natural Chemistry, Bioanalytical Chemistry, Radio and Nuclear Chemistry, Energy application in Chemistry. Apart from this some relevant tracks related to COVID 19 pandemic will be included this year.
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-12"><p>We welcome you in the <strong>International Conference on Chemical and Environmental Sciences 2020 (ICCAES 2020)</strong>, scheduled to be held during <strong>18-20 December, 2020 </strong>in Kolkata, India. The conference will be organised by <strong>Department of Basic Science and humanities, Institute of Engineering &amp; Management, Kolkata.</strong> <strong>The conference will be on virtual platform keeping in mind of COVID-19 crisis.</strong> ICCAES is an interdisciplinary forum on all aspects of Chemistry and Environmental Sciences including Spectroscopy and its application, Synthetic chemistry, Green Chemistry, Application of Nanobiotechnology, Polymer Chemistry, Materials Chemitry, Bioinorganic catalysis, Pharmaceutical Chemistry and drug discovery, Food chemistry, Agricultural Chemistry, Theoretical chemistry, Industrial Chemistry, Natural Chemistry, Bioanalytical Chemistry, Radio and Nuclear Chemistry, Energy application in Chemistry. Apart from this some relevant tracks related to COVID 19 pandemic will be included this year.
 </p><p>ICCES 2020 will include plenary talks and keynote lectures delivered by eminent speakers besides scientific presentations, poster competitions, model exhibition, quiz etc. One virtual workshop or training program will be conducted by experts working in pharmaceutical or healthcare industries in order to enlighten us by their working experiences related to COVID 19 research.
 </p><p><strong>Selected research articles will be published in :
 </strong></p><p><strong>The World Scientific News (International peer reviewed Web of Science indexed Journal) EISSN: 2392-2192
