--- a/index.html
+++ b/index.html
@@ -795,16 +795,19 @@ tr:nth-child(even) {
 				<table>
 				<tr><td>Prof. Keisuke Tominaga, Chief Advisor, Kobe University, Japan</td></tr>
 	<tr><td>Prof. D.D. Sarma, Chief Advisor, IISc, Bengaluru</td></tr>
-	<tr><td>	Prof. Daisuke Miyoshi, Konan University, Japan</td></tr>
-	<tr><td>Dr. Naoki Yamamoto, Jichi Medical University, Japan</td></tr>
-	<tr><td>Dr. Fulvia Chiampo, POLITECNICO DI TORINO, Italy</td></tr>
-	<tr><td>Dr. Kahlert Sebastian, ETH, Zurich, Switzerland</td></tr>
-	<tr><td>Dr. Tetsunari Kimura, Kobe University, Japan</td></tr>
 	<tr><td>Dr. Habil. Nicolai Lehnert, The University of Michigan, USA</td></tr>
+	<tr><td>Dr. Kahlert Sebastian, ETH, Zurich, Switzerland</td></tr>
+	<tr><td>Dr. Fulvia Chiampo, POLITECNICO DI TORINO, Italy</td></tr>
+	<tr><td>Prof. Daisuke Miyoshi, Konan University, Japan</td></tr>
+	<tr><td>Dr. Naoki Yamamoto, Jichi Medical University, Japan</td></tr>
+	
+	
+	<tr><td>Dr. Tetsunari Kimura, Kobe University, Japan</td></tr>
+	
 	<tr><td>Dr. Arnab Mukherjee, IISER Pune, India</td></tr>
 	<tr><td>Dr. Jhimli Bhattacharyay, NIT Dimapur, India</td></tr>
-	<tr><td>Dr. Nabarun Bhattacharya, Chief Advisor, C-DAC Kolkata</td></tr> 
-<tr><td>Prof. K.P. Ghatak, Chief Advisor, IEM, Kolkata </td></tr>
+	<tr><td>Dr. Nabarun Bhattacharya, C-DAC Kolkata</td></tr> 
+<tr><td>Prof. K.P. Ghatak, IEM, Kolkata </td></tr>
 <tr><td>Dr. Phani Bhushan Ghosh, IEM, Kolkata</td></tr> 
 
 
